  - Fix /ta town NAME set spawn not working when the spawn isn't already set.
    - Closes #5150.
  - API: Add Town.getSpawnOrNull().
0.97.0.21:
  - Language files moved into resources/lang subfolder inside the jar.
  - Townyperms.yml now saves itself on load in order to build the comments on new installs.
  - Update onPlayerLogin task to not use methods which can throw NREs.
  - Rename language files to proper country-coded names.
    - Your existing language file will be renamed.
  - New Translations: 
    - Indonesian courtesy of pobab.
    - Dutch courtesy of Warrior & pesie.
0.97.0.22:
  - Fix renamed towns not following the capitalization rule.
  - New Translation:
    - Romanian courtesy of DevinMart.
  - Fix SQL saving residents trying to find a jail column and failing.
0.97.0.23:
  - Move permissions check down in onPlayerMove, courtesy of Warriorrrr with PR #5176.
  - Fix typos in the readme, courtesy of fredster33 with PR #5179. (First-Time Contributor!)
  - Added New town map-colour event, courtesy of Goosius with PR #5172.
  - API: New event added: TownMapColourLocalCalculationEvent ... for recalculation of the local town colour by plugins
  - API: Existing Event renamed: TownMapColourNationalCalculationEvent ... for recalculation of the national town colour by plugins
  - Fix list page footers missing a space in their click commands. 
0.97.0.24:
  - Fix banners not regenerating properly when exploded.
    - Closes #5178.
  - Fix mayors being unable to evict townless players who own embassy plots in the mayors land.
  - API: Added TownBlock#getTownBlockOwner
    - Returns a TownBlockOwner object, either the resident who personally owns the townblock, or the town if there's no resident.
  - New Translation:
    - Turkish courtesy of Sanic.
  - Update "Updating Language Files" section of Contributing.md, courtesy of EuGNosii with PR #5188.
0.97.1.0:
  - Bump version for release.
0.97.1.1:
  - Fix %townyadvanced_player_status% placeholder.