@@ -4,10 +4,13 @@ import com.palmergames.bukkit.towny.Towny;
 import com.palmergames.bukkit.towny.TownyMessaging;
 import com.palmergames.bukkit.towny.TownyUniverse;
 import com.palmergames.bukkit.towny.object.Resident;
+import com.palmergames.bukkit.towny.object.Town;
 import com.palmergames.bukkit.util.BukkitTools;
 import org.bukkit.command.CommandSender;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.List;
 
 /**
  * @author ElgarL
@@ -19,6 +22,7 @@ public class ResidentPurge extends Thread {
 	private final CommandSender sender;
 	final long deleteTime;
 	final boolean townless;
+	final Town town;
 
 	/**
 	 * @param plugin reference to Towny
@@ -26,7 +30,7 @@ public class ResidentPurge extends Thread {
 	 * @param deleteTime time at which resident is purged (long)
 	 * @param townless if resident should be 'Townless'
 	 */
-	public ResidentPurge(Towny plugin, CommandSender sender, long deleteTime, boolean townless) {
+	public ResidentPurge(Towny plugin, CommandSender sender, long deleteTime, boolean townless, @Nullable Town town) {
 
 		super();
 		this.plugin = plugin;
@@ -34,6 +38,7 @@ public class ResidentPurge extends Thread {
 		this.setPriority(NORM_PRIORITY);
 		this.townless = townless;
 		this.sender = sender;
+		this.town = town;
 	}
 
 	@Override
@@ -43,7 +48,13 @@ public class ResidentPurge extends Thread {
 
 		message("Scanning for old residents...");
 		TownyUniverse townyUniverse = TownyUniverse.getInstance();
-		for (Resident resident : new ArrayList<>(townyUniverse.getResidents())) {
+		List<Resident> residentList;
+		if (town != null) {
+			residentList = new ArrayList<>(town.getResidents());
+		} else {
+			residentList = new ArrayList<>(townyUniverse.getResidents());
+		}
+		for (Resident resident : residentList) {
 			if (!resident.isNPC() && (System.currentTimeMillis() - resident.getLastOnline() > (this.deleteTime)) && !BukkitTools.isOnline(resident.getName())) {
 				if (townless && resident.hasTown()) {
 					continue;
@@ -61,7 +72,7 @@ public class ResidentPurge extends Thread {
 	private void message(String msg) {
 
 		if (this.sender != null)
-			TownyMessaging.sendMessage(this.sender, msg);
+			TownyMessaging.sendMsg(this.sender, msg);
 		else
 			TownyMessaging.sendMsg(msg);
 
